# rogii-wellbore-geology-lab

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: default.yaml  smoke.yaml
docs/: competition_constraints.md  data_notes.md  experiment_log.md  final_project_report.docx  final_project_report.md  local_scoring_strategy.md  proxy_calibration_20260607.md  public_lb_iteration_plan.md  public_research.md  sources.md  strategy.md  strategy_20260607.md  strategy_20260608.md  strategy_20260609.md  strategy_20260610.md  strategy_20260611_final_queue.md  strategy_20260612_improvement_queue.md  strategy_history.md
scripts/: blend_qp_20260610.py  build_tail_replay_dataset.py  local_pf_selector_cv.py  local_ridge_final_blend_cv.py  local_tail_cv.py  materialize_20260607_candidates.py  materialize_20260607_dynamic_blend_candidates.py  materialize_20260607_heavy_ridge_candidates.py  materialize_20260608_structural_candidates.py  materialize_20260609_discussion_candidates.py  materialize_20260609_jaemin_candidates.py  materialize_20260610_final5_candidates.py  materialize_20260610_sp45heavy_candidates.py  materialize_20260611_final_queue_candidates.py  materialize_20260612_improvement_candidates.py  materialize_public_static_kernels.py  monitor_kaggle_candidates.py  public_lb_blend_optimizer.py  public_lb_probe_tool.py  queue_20260605_candidates.py  queue_20260606_hidden_safe_candidates.py  queue_20260607_candidates.py  queue_20260607_dynamic_z_candidates.py  queue_20260607_heavy_ridge_candidates.py  queue_20260608_structural_candidates.py  (+17 more)
(+175 files in other folders)
