[project]
name = "rogii-wellbore-geology"
version = "0.1.0"
description = "Reproducible Kaggle workflow for ROGII Wellbore Geology Prediction."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "catboost>=1.2.8",
  "joblib>=1.4.2",
  "kaggle>=1.6.17",
  "lightgbm>=4.5.0",
  "matplotlib>=3.9.2",
  "numba>=0.61.0",
  "numpy>=1.26.4",
  "optuna>=4.1.0",
  "pandas>=2.2.3",
  "plotly>=5.24.1",
  "polars>=1.17.1",
  "pyarrow>=18.1.0",
  "pydantic>=2.10.3",
  "pyyaml>=6.0.2",
  "rich>=13.9.4",
  "scikit-learn>=1.5.2",
  "scipy>=1.14.1",
  "seaborn>=0.13.2",
  "shapely>=2.0.6",
  "tqdm>=4.67.1",
  "typer>=0.15.1",
  "xgboost>=2.1.3",
]

[project.optional-dependencies]
dev = [
  "ipykernel>=6.29.5",
  "pytest>=8.3.4",
  "ruff>=0.8.4",
]

[project.scripts]
rogii = "rogii_wellbore.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rogii_wellbore"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
